Update modules, add dummt section and toc to .tex

--- a/Reports/LatexModules/Style-article.tex
+++ b/Reports/LatexModules/Style-article.tex
@@ -8,3 +8,23 @@
 \usepackage{lastpage} %Finds last page number
 \usepackage{xspace} %Inserts necesary space bestween the page number, the dash and the total pagenumber
 \newcommand{\footerText}{\thepage\xspace /\pageref{LastPage}}
+
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\fancyhead[l]{}
+\fancyhead[c]{TIWSNE report}
+\fancyhead[r]{}
+\fancyfoot[l]{}
+\fancyfoot[c]{\footerText}
+\fancyfoot[r]{}
+
+\renewcommand{\headrulewidth}{0.4pt}
+\renewcommand{\footrulewidth}{0.4pt}
+\setlength{\headheight}{15pt}
+
+\fancypagestyle{firststyle}
+{
+	\fancyhf{} % Clear header and footer
+	\renewcommand{\headrulewidth}{0pt}
+	\renewcommand{\footrulewidth}{0pt}
+}
