--- a/Reports/LatexModules/TableSetup.tex
+++ b/Reports/LatexModules/TableSetup.tex
@@ -13,3 +13,17 @@
 \usepackage{color, colortbl}
 \definecolor{gr}{gray}{0.9}
 %\rowcolor{gr}
+
+% Example
+% --------------------------------
+% \begin{table}[h]
+% \begin{tabular}{cc|cc}
+
+% \textbf{Col 1}  & \textbf{Col 2} & \textbf{Col 3} & \textbf{Col 4} \\ \hline
+% \rowcolor{gr} \dots  & \dots & \dots & \dots \\
+% \dots  & \dots & \dots & \dots \\
+% \rowcolor{gr} \dots  & \dots & \dots & \dots \\ \hline
+% This & is & the & conclusion
+% \end{tabular}
+% \end{table}
+% --------------------------------
