--- a/Reports/LatexModules/TextSetup.tex
+++ b/Reports/LatexModules/TextSetup.tex
@@ -2,7 +2,7 @@
 %--------------------------------------------------------
 \usepackage[T1]{fontenc} 	% Can use danish characters
 \usepackage[utf8]{inputenc} % Input encoding. Can be used on Linux, Mac and Windows         
-\usepackage[danish]{babel} 	% Split words accoding to English
+\usepackage[english]{babel} 	% Split words accoding to English
 \usepackage{lmodern} 		% Font
 
 \usepackage[activate={true,nocompatibility},final,tracking=true,kerning=true,spacing=true,factor=1100,stretch=10,shrink=10]{microtype}
@@ -42,6 +42,7 @@
 	\newTOC			 					% prints Table of Contents
 	\microtypesetup{protrusion=true} 	% enables protrusion
 }
+\microtypecontext{spacing=nonfrench}
 %-------------------------------------------------------------------
 
 
