--- a/Reports/Report1/Main.tex
+++ b/Reports/Report1/Main.tex
@@ -9,8 +9,9 @@
 \begin{document}
 
 \maketitle
-% \tableofcontents 	% Table of Contents
-% % \listoffixmes 	%See LatexModule 
+\tableofcontents 	% Table of Contents
+% \listoffixmes 	%See LatexModule 
+\thispagestyle{firststyle}
 
 \newpage
 
@@ -18,7 +19,7 @@
 \subfile{Part1}
 
 
-% \newpage
+% \newpage	
 % \appendix
 
 % \bibliographystyle{ieeetr}
