--- a/Reports/LatexModules/TableOfContentSetup.tex
+++ b/Reports/LatexModules/TableOfContentSetup.tex
@@ -1,7 +1,10 @@
 
-%Dybde på indholdsfortegnelse
+% Depth of Table of context 
 %----------------------------------------------------------
-%Chapter, section, subsection, subsubsection
+% Chapter = 0
+% Section = 1
+% Subsection = 2,
+% Subsubsection = 3
 %----------------------------------------------------------
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{3}
