Update Reimer's name in Main.tex

--- a/Reports/Report1/Main.tex
+++ b/Reports/Report1/Main.tex
@@ -3,7 +3,7 @@
 \input{Preamble}
 
 \title{TISWNE \\ Report 1}
-\author{Nicolai Glud, \dots \\ Ragnar Johannesen, \dots \\ Rasmus Bækgaard, 10893 \\ Rune Arbjerg Heick, 11061}
+\author{Nicolai Glud, \dots \\ Rasmus Bækgaard, 10893 \\ Rasmus Sundgaard Reimer, \dots \\ Rune Arbjerg Heick, 11061}
 \date{\today}
 
 \begin{document}
