--- a/Reports/LatexModules/FigureSetup.tex
+++ b/Reports/LatexModules/FigureSetup.tex
@@ -1,12 +1,12 @@
-%Standard path to search for pictures
-%--------------------------------------------------
-%\begin{figure}[hbtp]
-%\centering
-%\includegraphics[width =0.9 \textwidth]{filnavn-for-png}
-%\caption{Titel}
-%\label{fig:referenceNavn}
-%\end{figure}
-%--------------------------------------------------
+% Standard path to search for pictures
+% --------------------------------------------------
+% \begin{figure}[hbtp]
+% \centering
+% \includegraphics[width = 0.9 \textwidth]{filename-of-png}
+% \caption{Caption title}
+% \label{fig:referenceNa,e}
+% \end{figure}
+% --------------------------------------------------
 
 \usepackage{graphicx}
 \usepackage{subcaption}
