--- a/Reports/LatexModules/URLSetup.tex
+++ b/Reports/LatexModules/URLSetup.tex
@@ -1,11 +1,13 @@
 
-%%URL kommandoer og sidetal farve
-%%Kaldes med \url{www...}
-%\usepackage{color} %Skal også bruges
+% URL links and color for page numbers, links, cites, etc.
+
+\usepackage{color} 
 \usepackage{hyperref}
 \hypersetup{ 
 	colorlinks	= true, 	% false: boxed links; true: colored links
     urlcolor	= blue,		% color of external links
     linkcolor	= black, 	% color of page numbers
-    citecolor	= blue,
+    citecolor	= blue,		% HERE
 }
+
+% \url{www...}
