--- a/Reports/Report1/Main.tex
+++ b/Reports/Report1/Main.tex
@@ -22,6 +22,8 @@
 % \newpage	
 % \appendix
 
+% Note: If the references do not update, try and *delete* the .aux etc. files and do complete rebuild!
+
 % \bibliographystyle{ieeetr}
 % \bibliography{Referencer}
 
