--- a/Reports/LatexModules/CodeWordsSetup.tex
+++ b/Reports/LatexModules/CodeWordsSetup.tex
@@ -1,7 +1,9 @@
-%Speciel skrift for enkelt linje kode
-%--------------------------------------------------
-%Udskriver med fonten 'Courier'
-%Mere info her: http://tex.stackexchange.com/questions/25249/how-do-i-use-a-particular-font-for-a-small-section-of-text-in-my-document
-%Eksempel: Funktionen \code{void Hello()} giver et output
-%--------------------------------------------------
+%Special font for single words of code in the plain text
+% --------------------------------------------------
+% Uses the font 'Courier'
+% More info: http://tex.stackexchange.com/questions/25249/how-do-i-use-a-particular-font-for-a-small-section-of-text-in-my-document
+% --------------------------------------------------
+% Example: The function \code{void Hello()} returns an output
+% --------------------------------------------------
+
 \newcommand{\code}[1]{{\fontfamily{pcr}\selectfont #1}}
