--- a/Reports/LatexModules/InfoBoxes.tex
+++ b/Reports/LatexModules/InfoBoxes.tex
@@ -1,9 +1,12 @@
 \usepackage{tcolorbox}
 
-%Create a box for theorems
-%\begin{theo}[titel] %optional
-%tekst
-%\end{theo}
+% -------------------------------------------------
+% Create a box for theorems
+% -------------------------------------------------
+% \begin{theo}[titel] %[title] is optional
+% tekst
+% \end{theo}
+% -------------------------------------------------
 \newenvironment{theo}[1][Vigtigt]{%
 \begin{tcolorbox}[colback=green!5,colframe=green!40!black,title=\textbf{#1}]
 }{%
