--- a/Reports/LatexModules/Style-memoir.tex
+++ b/Reports/LatexModules/Style-memoir.tex
@@ -1,15 +1,15 @@
-%Setup for the 'memoir' package (replace 'article')
+% Setup for the 'memoir' package (replace 'article')
 
-%Margin
+% Margin
 \usepackage[left=3cm,right=2cm,top=2.5cm,bottom=2cm]{geometry}
 
 \linespread{1.5}
 
 \newcommand{\HRule}{\rule{\linewidth}{0.8mm}}
 
-%Tekst i fotter
-\usepackage{lastpage} %Finds last page number
-\usepackage{xspace} %Inserts necesary space bestween the page number, the dash and the total pagenumber
+% Text in fotter
+\usepackage{lastpage} 	% Finds last page number
+\usepackage{xspace} 	% Inserts necesary space bestween the page number, the dash and the total pagenumber
 \newcommand{\footerText}{\thepage\xspace /\pageref{LastPage}}
 
 
@@ -25,7 +25,7 @@
 \makeevenfoot{mystyle}{}{\footerText}{} 
 \makeoddfoot{mystyle}{}{\footerText}{} 
 \makeatletter
-\makepsmarks{mystyle}{% Overskriften på sidehovedet
+\makepsmarks{mystyle}{ % Title on header
   \createmark{chapter}{left}{shownumber}{\@chapapp\ }{.\ }} 
 \makeatother
 \makefootrule{mystyle}{\textwidth}{\normalrulethickness}{0.4pt}
