Rename report folder, rename part1.tex to Compression.tex, add illustrations of one bit compression

--- a/Reports/Report/Preamble.tex
+++ b/Reports/Report/Preamble.tex
@@ -20,3 +20,10 @@
 
 \input{\modulesPath/Style-article}
 % \input{\modulesPath/Style-memoir}
+
+\usepackage[all]{xy}
+
+\makeatletter
+\newcommand*{\tightdisplaymath}{\abovedisplayskip\z@\belowdisplayskip\z@}
+\makeatother
+\usepackage{placeins}
