Add title and student numbers.

--- a/Reports/Report/Main.tex
+++ b/Reports/Report/Main.tex
@@ -2,8 +2,8 @@
 
 \input{Preamble}
 
-\title{TISWNE \\ Report 1}
-\author{Nicolai Glud, \dots \\ Rasmus Sundgaard Reimer, \dots \\ Rasmus Bækgaard, 10893 \\ Rune Arbjerg Heick, 11061}
+\title{TIWSNE \\ Mini-project 6: Image Compression \\ TelosBRRRN}
+\author{Nicolai Glud, 20093625 \\ Rasmus Sundgaard Reimer, 201181008 \\ Rasmus Bækgaard, 10893 \\ Rune Arbjerg Heick, 11061}
 \date{\today}
 
 \begin{document}
