Add cameraman to frontpage.

--- a/Reports/Report/Main.tex
+++ b/Reports/Report/Main.tex
@@ -9,6 +9,12 @@
 \begin{document}
 
 \maketitle
+
+\begin{figure}[ht!]
+\centering
+\includegraphics[width=0.5\textwidth]{cameraman}
+\end{figure}
+
 \tableofcontents 	% Table of Contents
 % \listoffixmes 	%See LatexModule 
 \thispagestyle{firststyle}
@@ -18,6 +24,7 @@
 
 \subfile{Compression}
 \include{Projectdescription}
+
 
 
 % \newpage	
