--- a/Reports/Report/Main.tex
+++ b/Reports/Report/Main.tex
@@ -21,11 +21,15 @@
 
 \newpage
 
+% Main contribution & main challenges & lessons
 
+\include{Introduction}
+%\include{Projectdescription}
+\include{Theory}
 \subfile{Compression}
-\include{Projectdescription}
-
-
+\include{Implementation}
+\include{Test_Results}
+\include{Conclusion}
 
 % \newpage	
 % \appendix
