Switch from article to memoir

--- a/Reports/Report/Introduction.tex
+++ b/Reports/Report/Introduction.tex
@@ -1,9 +1,4 @@
-%!TEX root = Main.tex
-%\documentclass[Main]{subfiles}
-
-%\begin{document}
-
-\section{Project Description}
+\chapter{Project Description}
 Mini - project  6:  Image Compression using TelosB mote.\\
 Load a black and white image file from PC to a TelosBmote. The image is of size 256X256, each pixel of 8 bits.\\
 
@@ -20,5 +15,3 @@ Advanced study:
 \item Apply different compression operations of the image
 \item Compare different compression algorithm in terms of computational cost and recovered image quality
 \end{itemize}
-
-%\end{document}
