--- a/Reports/Report/Introduction.tex
+++ b/Reports/Report/Introduction.tex
@@ -3,10 +3,14 @@
 
 %\begin{document}
 
-\section{Project Description}
-Mini - project  6:  Image Compression using TelosB mote.\\
-Load a black and white image file from PC to a TelosBmote. The image is of size 256X256, each pixel of 8 bits.\\
+\section{Introduction}
+The purpose of this mini project is to design and implement a system that can transfer images wirelessly between two Telos B motes. A black and white image is loaded onto the sender mote and transferred to the receiver mote with multiple types of lossy compression. The energy used during wireless transmission will be monitored in order to compare energy usage of different types  of compression. The original case description can be seen below.
 
+\begin{center}
+\noindent\rule{4cm}{0.4pt}
+\end{center}
+Mini - project 6: Image Compression using Telos B mote.\\
+Load a black and white image file from PC to a Telos B mote. The image is of size 256X256, each pixel of 8 bits.\\
 Basic requirement:
 \begin{itemize}
 \item Make a simple compression operation of the image
@@ -14,11 +18,13 @@ Basic requirement:
 \item The sink reconstructs the image
 \item Analyze the energy consumption with w/o compression. 
 \end{itemize}
-
 Advanced study:
 \begin{itemize}
 \item Apply different compression operations of the image
 \item Compare different compression algorithm in terms of computational cost and recovered image quality
 \end{itemize}
+\begin{center}
+\noindent\rule{4cm}{0.4pt}
+\end{center}
 
 %\end{document}
