--- a/Reports/Report/Main.tex
+++ b/Reports/Report/Main.tex
@@ -17,16 +17,14 @@
 
 \tableofcontents 	% Table of Contents
 % \listoffixmes 	%See LatexModule 
-\thispagestyle{firststyle}
 
 \newpage
 
 % Main contribution & main challenges & lessons
 
 \include{Introduction}
-%\include{Projectdescription}
 \include{Theory}
-\subfile{Compression}
+%\subfile{Compression}
 \include{Implementation}
 \include{Test_Results}
 \include{Conclusion}
