Update .texs to work again

--- a/Reports/Report/Implementation.tex
+++ b/Reports/Report/Implementation.tex
@@ -1,3 +1,4 @@
+%!TEX root = Main.tex
 \chapter{Implementation}
 The following chapter seeks to explain the implementation of the mini project.\\
 
@@ -22,14 +23,14 @@ The serial communication is responsible for the transfer of the image to and fro
 \end{table}
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.8\textwidth]{Figures/PCtoTelosb}
+	\includegraphics[width=0.8\textwidth]{PCtoTelosb}
 	\caption{Transfer to telos sequence diagramme.}
 	\label{transfertotelos}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.8\textwidth]{Figures/PCfromTelosb}
+	\includegraphics[width=0.8\textwidth]{PCfromTelosb}
 	\caption{Transfer from telos sequence diagramme.}
 	\label{transferfromtelos}
 \end{figure}
