--- a/Reports/Report/Main.tex
+++ b/Reports/Report/Main.tex
@@ -1,4 +1,4 @@
-\documentclass[danish, oneside, 12pt]{memoir}
+\documentclass[danish, oneside, 11pt]{memoir}
 
 \input{Preamble}
 
@@ -14,6 +14,8 @@
 \centering
 \includegraphics[width=0.5\textwidth]{cameraman}
 \end{figure}
+
+\newpage
 
 \tableofcontents 	% Table of Contents
 % \listoffixmes 	%See LatexModule 
