Det her compiler

--- a/Reports/Report/Conclusion.tex
+++ b/Reports/Report/Conclusion.tex
@@ -1,6 +1,6 @@
 %!TEX root = Main.tex
-\chapter{Discussion}
+\section{Discussion}
 Why and How do we save energy by compressing?
 
 
-\chapter{Conclusion}
+\section{Conclusion}
