--- a/Reports/Report/Implementation.tex
+++ b/Reports/Report/Implementation.tex
@@ -1,11 +1,11 @@
 %!TEX root = Main.tex
-\chapter{Implementation}
+\section{Implementation}
 The following chapter seeks to explain the implementation of the mini project.\\
 
-\section{Overall Design}
+\subsection{Overall Design}
 Image and explaination of the overall system and blocks\\
 
-\section{Serial communication}
+\subsection{Serial communication}
 The serial communication is responsible for the transfer of the image to and from the Telos B. A header file is available to both the PC software and the Telos B program. It contains a series of defines that are used for the communication messages. The defines can be found in table \ref{definetable}.
 \begin{table}[H]
     \begin{tabular}{|l|l|l|}
@@ -35,8 +35,8 @@ The serial communication is responsible for the transfer of the image to and fro
 	\label{transferfromtelos}
 \end{figure}
 
-\section{Radio Block}
+\subsection{Radio Block}
 
-\section{Compression block}
+\subsection{Compression block}
 
 
