--- a/Reports/Report/Main.tex
+++ b/Reports/Report/Main.tex
@@ -1,4 +1,4 @@
-\documentclass[danish, oneside, 11pt]{memoir}
+\documentclass[danish, oneside, 11pt]{article}
 
 \input{Preamble}
 
@@ -26,7 +26,7 @@
 
 \include{Introduction}
 \include{Theory}
-%\subfile{Compression}
+\subfile{Compression}
 \include{Implementation}
 \include{Test_Results}
 \include{Conclusion}
