--- a/Reports/Report/Test_Results.tex
+++ b/Reports/Report/Test_Results.tex
@@ -1,13 +1,13 @@
 %!TEX root = Main.tex
-\chapter{Tests}
+\section{Tests}
 Description of the tests made along with the procedures behind these test.
 
-\section{Functionality test}
+\subsection{Functionality test}
 
-\section{Energy Test}
+\subsection{Energy Test}
 
-\chapter{Results}
+\section{Results}
 
-\section{Functionality test}
+\subsection{Functionality test}
 
-\section{Energy Test}
+\subsection{Energy Test}
