--- a/Reports/LatexModules/FigureSetup.tex
+++ b/Reports/LatexModules/FigureSetup.tex
@@ -4,7 +4,7 @@
 % \centering
 % \includegraphics[width = 0.9 \textwidth]{filename-of-png}
 % \caption{Caption title}
-% \label{fig:referenceNa,e}
+% \label{fig:referenceName}
 % \end{figure}
 % --------------------------------------------------
 
