--- a/Reports/Report/Main.tex
+++ b/Reports/Report/Main.tex
@@ -26,7 +26,7 @@
 
 \include{Introduction}
 \include{Theory}
-\subfile{Compression}
+\include{Compression}
 \include{Implementation}
 \include{Test_Results}
 \include{Conclusion}
