--- a/Reports/Report/Theory.tex
+++ b/Reports/Report/Theory.tex
@@ -24,15 +24,9 @@ For instance the four bit compression takes two bytes, \texttt{aaaa\_\_\_\_} and
 \label{sub:one_bit_compression}
 \FloatBarrier
 
-The One Bit Compression losses one bit pr. byte.
-This means, that a $256 \cdot 256$ pixel, 8 bit picture (65536 bytes) will be reduced $\dfrac{7}{8}$ of information (57344 bytes).
-Each pixel can be represented with one byte, 256 different colors from pitch black to bright white.
-With this compression there will be 128 different colors to represent the same colors.
+The One Bit Compression gives a compression of $\dfrac{1\ bit}{8\ bit} = 12.5\%$.
 
-Figure \ref{fig:1BitUncompressed} shows the 8 uncompressed bits. 
-Because it is a one bit compression the last bit is cut away from each byte, as seen on Figure \ref{fig:1bitCom}.
-The last byte, \texttt{hhhh hhh0}, should be transfered to the end of each other byte which gives the result of Figure \ref{fig:1BitCompressed}.
-
+The algorithm takes 8 bytes and maps them into 7 bytes where the least significant bit, of each byte, is lost. This can be seen on Figure \ref{fig:1BitCompressingAlgo}.
 
 \begin{figure}[htbp]
 	\centering
@@ -48,21 +42,19 @@ The last byte, \texttt{hhhh hhh0}, should be transfered to the end of each other
 			g	& g	& g	& g	& g	& g	& g	& g	\\
 			h	& h	& h	& h	& h	& h	& h	& h	}}
 		\caption{8 uncompressed bytes.}
-		\label{fig:1BitUncompressed}
 	\end{subfigure}
 	\begin{subfigure}[t]{0.3\textwidth}\tightdisplaymath
 		\centerline{
 		\xymatrix@=1pt{
-			a	& a	& a	& a	& a	& a	& a	& 0	\\
-			b	& b	& b	& b	& b	& b	& b	& 0 \\
-			c	& c	& c	& c	& c	& c	& c	& 0 \\
-			d	& d	& d	& d	& d	& d	& d	& 0 \\
-			e	& e	& e	& e	& e	& e	& e	& 0 \\
-			f	& f	& f	& f	& f	& f	& f	& 0	\\
-			g	& g	& g	& g	& g	& g	& g	& 0	\\
-			h \ar[uuuuuuurrrrrrr]	& h\ar[uuuuuurrrrrr]	& h	\ar[uuuuurrrrr]& h \ar[uuuurrrr] & h \ar[uuurrr] & h \ar[uurr] & h \ar[ur] & 0 }}
-	        \caption{Replace last bit in each byte with the 8th byte's bit.}
-	        \label{fig:1bitCom}
+			a	& a	& a	& a	& a	& a	& a	& \_ \\
+			b	& b	& b	& b	& b	& b	& b	& \_ \\
+			c	& c	& c	& c	& c	& c	& c	& \_ \\
+			d	& d	& d	& d	& d	& d	& d	& \_ \\
+			e	& e	& e	& e	& e	& e	& e	& \_ \\
+			f	& f	& f	& f	& f	& f	& f	& \_ \\
+			g	& g	& g	& g	& g	& g	& g	& \_ \\
+			h \ar[uuuuuuurrrrrrr]	& h\ar[uuuuuurrrrrr]	& h	\ar[uuuuurrrrr]& h \ar[uuuurrrr] & h \ar[uuurrr] & h \ar[uurr] & h \ar[ur] & h }}
+	        \caption{Mapping from 8 to 7 bytes where LSB is lost.}
 	\end{subfigure}
 	\begin{subfigure}[t]{0.3\textwidth}\tightdisplaymath
 		\centerline{
@@ -75,9 +67,9 @@ The last byte, \texttt{hhhh hhh0}, should be transfered to the end of each other
 			f	& f	& f	& f	& f	& f	& f	& h	\\
 			g	& g	& g	& g	& g	& g	& g	& h	}}
 		\caption{7 compressed bytes.}
-		\label{fig:1BitCompressed}
 	\end{subfigure}%
 	\caption{One bit compressions in steps.}
+	\label{fig:1BitCompressingAlgo}
 \end{figure}
 
 
