--- a/Reports/Report/Implementation.tex
+++ b/Reports/Report/Implementation.tex
@@ -4,6 +4,12 @@ The following chapter seeks to explain the implementation of the mini project.\\
 
 \subsection{Overall Design}
 Image and explanation of the overall system and blocks\\
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1\textwidth]{FullSystem}
+	\caption{Full System Diagram.}
+	\label{FullSystem}
+\end{figure}
 
 \subsection{Serial communication}
 The serial communication is responsible for the transfer of the image to and from the TelosB. A header file is available to both the PC software and the TelosB program. It contains a series of defines that are used for the communication messages. The defines can be found in table \ref{definetable}.
