Change figure text.

--- a/Reports/Report/Theory.tex
+++ b/Reports/Report/Theory.tex
@@ -68,7 +68,7 @@ The algorithm takes 8 bytes and maps them into 7 bytes where the least significa
 			g	& g	& g	& g	& g	& g	& g	& h	}}
 		\caption{7 compressed bytes.}
 	\end{subfigure}%
-	\caption{One bit compressions in steps.}
+	\caption{One bit compression algorithm.}
 	\label{fig:1BitCompressingAlgo}
 \end{figure}
 
