Reupdate TextSetup.tex to remove extra space in itemize

--- a/Reports/Report/Implementation.tex
+++ b/Reports/Report/Implementation.tex
@@ -56,4 +56,4 @@ This interface allows the different implementation to be accessed with the same 
 The \texttt{Compress(...)} method will take 1024 bytes in its first parameter, and return the compressed data in its second parameter, and return the size of the compression as return output.
 
 The \texttt{Decompress(...)} method will, too, take the input as the first parameter and output as second parameter. 
-The \texttt{Decompress(...)} method already knows how big the input is, and the output will always 
+The \texttt{Decompress(...)} method already knows how big the input is, and the output will always 1024 bytes.
