--- a/Reports/LatexModules/TextSetup.tex
+++ b/Reports/LatexModules/TextSetup.tex
@@ -10,6 +10,9 @@
 % Use both packages
 \usepackage{enumerate}
 \usepackage[shortlabels]{enumitem}
+\setlist{noitemsep}
+\setlist[itemize]{topsep=-10pt}
+
 %-------------------------------------------------------------------
 
 % Indent on empty line break (more than 1)
