Change layout of compression algorithm descriptions.

--- a/Reports/Report/Theory.tex
+++ b/Reports/Report/Theory.tex
@@ -25,8 +25,8 @@ For instance the four bit compression takes two bytes, \texttt{aaaa\_\_\_\_} and
 \FloatBarrier
 
 The One Bit Compression gives a compression of $\dfrac{1\ bit}{8\ bit} = 12.5\%$.
-
-The algorithm takes 8 bytes and maps them into 7 bytes where the least significant bit, of each byte, is lost. This can be seen on Figure \ref{fig:1BitCompressingAlgo}.
+The algorithm takes 8 bytes and maps them into 7 bytes where the least significant bit, of each byte, is lost.
+This can be seen on Figure \ref{fig:1BitCompressingAlgo}.
 
 \begin{figure}[htbp]
 	\centering
@@ -77,8 +77,8 @@ The algorithm takes 8 bytes and maps them into 7 bytes where the least significa
 \FloatBarrier
 
 The Two Bit Compression gives a compression of $\dfrac{2\ bit}{8\ bit} = 25\%$.
-
-The algorithm takes 4 bytes and maps them into 3 bytes where the two least significant bits, of each byte, is lost. This can be seen on Figure \ref{fig:2BitCompressingAlgo}.
+The algorithm takes 4 bytes and maps them into 3 bytes where the two least significant bits, of each byte, is lost.
+This can be seen on Figure \ref{fig:2BitCompressingAlgo}.
 
 \begin{figure}[htbp]
 	\centering
